force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/tc9_edc__Setup_Withholding_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Setup Withholding Rule</label>
    <pluralLabel>Setup Withholding Rules</pluralLabel>
</CustomObject>