force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/fields/tc9_edc__ATO_Tax_Scale__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__ATO_Tax_Scale__c</fullName>
    <label>ATO Tax Scale</label>
    <length>200</length>
    <type>Text</type>
</CustomField>