force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/fields/tc9_edc__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>