force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/fields/tc9_edc__STSL__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__STSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STSL</label>
    <type>Checkbox</type>
</CustomField>