force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/fields/tc9_edc__Update_Pack__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Update_Pack__c</fullName>
    <label>Update Pack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020 July 1</fullName>
                <default>true</default>
                <label>2020 July 1</label>
            </value>
            <value>
                <fullName>2020 October 1</fullName>
            </value>
            <value>
                <fullName>2021 July 1</fullName>
            </value>
            <value>
                <fullName>2022 July 1</fullName>
            </value>
            <value>
                <fullName>2023 July 1</fullName>
            </value>
            <value>
                <fullName>2024 July 1</fullName>
            </value>
            <value>
                <fullName>2025 July 1</fullName>
            </value>
            <value>
                <fullName>2025 September 24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>