force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/fields/tc9_edc__Whole_of_Income_Cap__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Whole_of_Income_Cap__c</fullName>
    <label>Whole of Income Cap</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>