force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/fields/tc9_edc__Withholding_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Withholding_Rule_Name__c</fullName>
    <label>Withholding Rule Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>