force-app/main/default/objects/tc9_edc__Setup_Withholding_Rule__mdt/fields/tc9_edc__Withholding_Year__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Withholding_Year__c</fullName>
    <label>Withholding Year</label>
    <length>200</length>
    <type>Text</type>
</CustomField>